fix: n+1 problem and many mistakes